fix: update revision in service worker and improve button accessibility in DisplayDuty and Students components style: align text in DisplayDuty and Students CSS modules

--- a/src/styles/modules/public/DisplayDuty.module.css
+++ b/src/styles/modules/public/DisplayDuty.module.css
@@ -82,6 +82,7 @@
 }
 .contentDataP {
   font-family: Roboto;
+  text-align: left;
 }
 
 .noData {
