--- a/src/styles/modules/public/Students.module.css
+++ b/src/styles/modules/public/Students.module.css
@@ -95,6 +95,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.4rem;
+  text-align: left;
 }
 .contentStatusBox {
   display: flex;
